--- a/package.json
+++ b/package.json
@@ -9,17 +9,23 @@
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.3",
     "html-webpack-plugin": "^5.5.0",
+    "postcss-loader": "^6.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "sass": "^1.49.8",
+    "sass-loader": "^12.6.0",
     "webpack-cli": "^4.9.2",
     "webpack-merge": "^5.8.0"
   },
   "scripts": {
-    "dev": "webpack --config webpack.dev.js",
+    "dev": "webpack --watch --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^10.2.4",
+    "css-loader": "^6.6.0",
+    "mini-css-extract-plugin": "^2.5.3",
+    "style-loader": "^3.3.1",
     "webpack": "^5.69.1",
     "webpack-dev-server": "^4.7.4"
   }
