--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@chakra-ui/react": "^1.8.5",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "babel-loader": "^8.2.3",
+    "framer-motion": "^6",
     "html-webpack-plugin": "^5.5.0",
     "postcss-loader": "^6.2.1",
     "react": "^17.0.2",
