--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.5.10",
     "@chakra-ui/react": "^1.8.7",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
@@ -15,6 +16,7 @@
     "@types/react-dom": "^17.0.9",
     "firebase": "^9.6.10",
     "framer-motion": "^6",
+    "graphql": "^16.3.0",
     "import-cwd": "^3.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
