--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "^1.8.7",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
@@ -20,6 +21,7 @@
     "import-cwd": "^3.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-loader-spinner": "^6.0.0-0",
     "react-scripts": "5.0.0",
     "recoil": "^0.6.1",
     "typescript": "^4.4.2",
